--- a/web/Dashboard.html
+++ b/web/Dashboard.html
@@ -95,21 +95,19 @@
                 <span class="percentage"></span><small class="units"></small>
               </div> -->
             </div>
-            
+
             <div class="row">
               <div class="col" style="font-size: 15px">
                 <div class="container" style="padding: 0; margin: 0">
                   <div class="row">
                     <div style="margin: auto">
                       <div style="text-align: end; font-size: 11px">
-                        <div class="container" style="padding: 0;margin: 0;">
+                        <div class="container" style="padding: 0; margin: 0">
                           <div class="row">
-                            <div class="col" style="text-align: center;">
-                              <img width="15px" src="/web/Icons/battery.png" />                        
+                            <div class="col" style="text-align: center">
+                              <img width="15px" src="/web/Icons/battery.png" />
                             </div>
-                            <div class="col">
-                              BATTERY RANGE
-                            </div>
+                            <div class="col">BATTERY RANGE</div>
                           </div>
                         </div>
                       </div>
@@ -133,10 +131,14 @@
                   <div class="row">
                     <div style="margin: auto">
                       <div style="text-align: end; font-size: 11px">
-                        <div class="container" style="padding: 0;margin: 0;">
+                        <div class="container" style="padding: 0; margin: 0">
                           <div class="row">
-                              <img style="margin-right: 5px;" width="15px" src="/web/Icons/cell.png" />
-                              CHARGE
+                            <img
+                              style="margin-right: 5px"
+                              width="15px"
+                              src="/web/Icons/cell.png"
+                            />
+                            CHARGE
                           </div>
                         </div>
                       </div>
@@ -144,10 +146,14 @@
                   </div>
                   <div class="row">
                     <div style="text-align: center; width: 100%">
-                      <div class="container" style="margin: 15px 0 0 0; padding: 0">
+                      <div
+                        class="container"
+                        style="margin: 15px 0 0 0; padding: 0"
+                      >
                         <div class="row">
                           <div class="col" style="font-size: 30px">
-                            <span id="percent-value"> 0 </span><sub style="font-size: 10px"> % </sub>
+                            <span id="percent-value"> 0 </span
+                            ><sub style="font-size: 10px"> % </sub>
                           </div>
                         </div>
                       </div>
@@ -159,11 +165,17 @@
                 <div class="container" style="padding: 0; margin: 0">
                   <div class="row">
                     <div style="margin: auto">
-                      <div style="text-align: left  ; font-size: 11px">
-                        <div class="container" style="padding: 0;margin: 0;">
+                      <div style="text-align: left; font-size: 11px">
+                        <div class="container" style="padding: 0; margin: 0">
                           <div class="row">
-                              <img height="15px" style="margin-right: 5px;" width="15px" src="/web/Icons/time.png" />
-                              TIME <br> REMAINING
+                            <img
+                              height="15px"
+                              style="margin-right: 5px"
+                              width="15px"
+                              src="/web/Icons/time.png"
+                            />
+                            TIME <br />
+                            REMAINING
                           </div>
                         </div>
                       </div>
@@ -184,28 +196,26 @@
               </div>
             </div>
             <div class="row">
-                <hr
-                  width="100%"
-                  style="
-                    background-color: darkslategray;
-                    height: 1px;
-                    margin: 5px 0 5px 0;
-                  "
-                />
+              <hr
+                width="100%"
+                style="
+                  background-color: darkslategray;
+                  height: 1px;
+                  margin: 5px 0 5px 0;
+                "
+              />
+            </div>
+            <div class="row" style="width: 100%">
+              <div style="font-size: 10px; margin: auto">
+                CHARGING STATUS : DISCHARGING
               </div>
-              <div class="row" style="width: 100%;">
-                  <div style="font-size: 10px;margin: auto;">
-                      CHARGING STATUS : DISCHARGING
-                  </div>
-              </div>
+            </div>
           </div>
         </div>
         <div class="col">
           <div class="container" style="height: 100%">
-            <div class="row" style="width: 100%;">
-              <div style="text-align: center;width: 100%;">
-                E-BaiChycal
-              </div>
+            <div class="row" style="width: 100%">
+              <div style="text-align: center; width: 100%">E-BaiChycal</div>
             </div>
             <div class="row" style="margin-top: 20px">
               <div
@@ -256,6 +266,34 @@
                     Click to Reset
                   </div>
                 </div>
+              </div>
+              <div class="container" style="margin-top: 10px">
+                <div class="row">
+                  <label class="label" style="width: 100%">
+                    <div class="container" style="margin: 0; padding: 0">
+                      <div class="row">
+                        <div class="col">
+                          <div class="label-text">Paddle Assist</div>
+                          
+                        </div>
+                        <div class="col">
+                          <div class="toggle" style="float: inline-end;">
+                            <input
+                              class="toggle-state"
+                              type="checkbox"
+                              name="check"
+                              value="check"
+                            />
+                            <div class="indicator"></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </label>
+                </div>
+                <div class="row"></div>
+                <div class="row"></div>
+                <div class="row"></div>
               </div>
             </div>
           </div>
